# pip-predict-transformer

./: .gitignore  README.md  setup.cfg
docs/: data-preprocessing.md  model-architecture.md  train-config.md
examples/: compare_target_predict.py  find_best_trained.py  fit_gev_from_dataset.py  hyper_search.py  inference_model.py  mirror_transform.py  pip_data_generation.py  train_model.py  train_pretrained.py
percepformer/: __init__.py
percepformer/infer/: inference.py  load.py
percepformer/model/: layer.py  model.py
percepformer/train/: config.py  dataset.py  loss.py  train.py  visual.py
percepformer/utils/: dataset.py  transform.py
