[metadata]
name = pip-predict-transformer
version = 0.1.0
author = Mehran ESMAILYBAJEGANI
author_email = mehranesmaily907@gmail.com
description = percepformer: This project leverages Transformer architecture to predict perceptually important points (Pip points) in financial market charts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mehranESB/pip-predict-transformer.git
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Office/Business :: Financial
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = chartDL, finance, trading, machine learning, deep learning, OHLCV, technical analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    chart-pip-det
    scipy
